--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -6,6 +6,7 @@
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487474.md#1" target="_blank">【一线采访】优胜教育爆雷 逾千家长老师维权</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487474.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/754d9f64807653fe3817fd468111df41-150x120.jpg" align ="left"></a>有1200余家直营校区的大型教育机构“优胜教育”在国内多地相继爆雷，仅一个校区拖欠家长的费用和拖欠员工的工资就高达近千万。上千名家长和老师周一到北京优胜教育总部请愿，同警方发生冲突，至少一人被带走。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 9:42 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487448.md#1" target="_blank">【直播】专访《蚕食美国》制片人</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487448.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/download-49-150x120.jpg" align ="left"></a>周一（19日）晚上21:30～22:15，新唐人《热点互动》节目专访纪录片《蚕食美国》制片人柯蒂斯·鲍尔斯（Curtis Bowers），与他探讨共产主义在美国的渗透，以及中共在最新披露的拜登父子丑闻中，扮演的角色。敬请收看。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 7:49 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487273.md#1" target="_blank">拜登电邮门  朱利安尼：将发布更多爆料</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487273.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2006/11/611140940171508-150x120.jpg" align ="left"></a>前纽约市市长鲁迪·朱利安尼（Rudy Giuliani）周一（10月19日）透露，在《纽约邮报》上周爆料前副总统乔·拜登（Joe Biden）家庭与乌克兰天然气公司之间的交易后，接下来会有更多其电子邮件和信息发出。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 4:59 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486851.md#1" target="_blank">广州法轮功学员刘金焕被构陷到法院</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486851.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/11-13-150x120.jpg" align ="left"></a>广州市番禺区法轮功学员刘金焕于2020年5月18日被番禺区公安分局国保、钟村派出所警察绑架，非法关押到番禺区看守所，目前已经被构陷到海珠区法院。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 2:24 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1" target="_blank">大疫下解救有道 历史启示带您闯过中共肺炎</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/12/wudaozi-01-01x-150x120.jpg" align ="left"></a>外界担忧武汉疫情仍在扩大。中共隐瞒瘟疫实情，武汉民众呼救“千万不要相信政府，要靠自己”。在缺少医药物资，瘟疫肆虐，形势严峻的情况下，百姓应当如何自救？我们反思历史，寻找大疫之下的解救之道，与您共闯难关。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 11:47 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486819.md#1" target="_blank">【一线采访】民众厦门举横幅要中共下台</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486819.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-150x120.jpg" align ="left"></a>日前，中国维权人士肖春在街头举起写有“人权民主法治”等字样的横幅，并要求中共下台，追究其迫害中国百姓的罪责。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 10:33 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482137.md#1" target="_blank">【最新疫情10.19】美加边境关闭延至11月</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482137.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RW499-1-150x120.jpg" align ="left"></a>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 10:00 PM							</td></tr>
@@ -45,6 +46,5 @@ WHO：欧洲某些地区的重症监护病房近满员
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484524.md#1" target="_blank">疫情期间 大陆“罚款经济”愈发严重</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484524.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2011/03/1103102129062320-150x120.jpg" align ="left"></a>大陆一直存在“罚款经济”，即中共执法部门高额罚款、乱开罚单，甚至有意设置障碍造成涉事人被罚。今年疫情爆发之后，“罚款经济”的情况更为严重。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 1:20 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484560.md#1" target="_blank">以色列和阿联酋加强合作 达成投资双边协议</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484560.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8RJ4QH-150x120.jpg" align ="left"></a>以色列和阿拉伯联合酋长国（简称阿联酋）的财政部周日（10月18日）表示，两国达成了一份双边协议，该协议将为在对方国家进行投资的投资者提供激励和保护。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 12:24 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484491.md#1" target="_blank">泰国民众大规模街头抗议第五天 吁总理辞职</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484491.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229143345-150x120.jpg" align ="left"></a>周日（10月18日），成千上万的泰国民众不顾政府采取的镇压措施，再次在首都曼谷等多个城市发动街头抗议。这是泰国民众连续第五天发动街头抗议活动。抗议民众要求总理帕拉育（Prayuth Chan-ocha）辞职。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 11:04 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484121.md#1" target="_blank">程晓农：中共的现金外汇储备行将见底</a><br></h3><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484121.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-150x120.jpg" align ="left"></a>10月11日国内的网上出现了一篇文章，标题是《我国外汇储备还有多少可用？》，就外汇储备不足发出了警讯。本文详细分析中共外汇储备的真相，认为中共的现金外汇储备行将见底。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 10:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kztpea348/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/kztpea348/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
