--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -116,31 +116,31 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485836.md#1">【一线采访视频版】游青岛返粤 民众遭强制隔离</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485794.md#1">小祯被诊断胸椎脊上骨裂 脊椎打针吓到飙泪</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
-<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486080.md#1">丁小芹卖假包需入狱服刑 判刑2年半定谳</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485655.md#1">全球15国民调：台湾人最希望川普当选</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/19/n12487702.htm">【最新疫情10.20】川普：全听科学的 美将陷萧条</a></p><hr>
