--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11246440.md#1" target="_blank">中国维权律师彭永峰修炼法轮功 见证神奇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
