--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485349.md#1" title="万人拉和平人链 德民众：中共病毒令人惊醒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486178.md#1" title="中共人质外交威胁美加 专家：流氓本性使然""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kztpea348.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487945.md#1">台阁揆：要把中共在斐济耍流氓证据诉诸国际</a><br>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488055.md#1">突袭庇护城市 美移民局逮捕172名犯罪非法移民</a><br>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487736.md#1">义乌圣诞商品市场订单少50% 有商户歇业</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488114.md#1">封城争议下 白思豪：红色区还须几周解封</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488126.md#1">近千位长岛杰斐逊港居民 举办挺川车队游行</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488173.md#1">【翻墙必看】江曾下大棋？分析：人算不如天算</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487958.md#1">【西岸观察】亨特电脑门曝中共惯用色诱要挟</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488040.md#1">7个月损失八千万 纽约YMCA裁掉近半员工</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488042.md#1">纽约家长抗议 学校未经同意对学生病毒检测</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488051.md#1">重振旅游业 纽约市旅游局推出新项目</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487945.md#1">台阁揆：要把中共在斐济耍流氓证据诉诸国际</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488055.md#1">突袭庇护城市 美移民局逮捕172名犯罪非法移民</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,868,342 人
+!共 365,868,846 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
