--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10097243.md#1" target="_blank">大学教授炼法轮功身心受益 反迫害控告江泽民</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
